--- a/trailr/public/422.html
+++ b/trailr/public/422.html
@@ -6,22 +6,52 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>The change you wanted was rejected (422)</title>
+
 	<style type="text/css">
-		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+		body { 
+			padding-top:4em;
+			background-color: #222222; 
+			color: #666; 
+			text-align: center; 
+			font-family: arial, sans-serif; 
+		}
+		
+		div#logo {
+			text-align:left;
+			width: 34em;
+			margin:0px;
+			margin-left:auto;
+			margin-right:auto;			
+		}
+		
 		div.dialog {
 			width: 25em;
-			padding: 0 4em;
-			margin: 4em auto 0 auto;
+			padding: 1em 4em;
+			margin: 0 auto 0 auto;
 			border: 1px solid #ccc;
 			border-right-color: #999;
 			border-bottom-color: #999;
+			background-color:#F5F5F5;
+			
+			-moz-border-radius:5px;
+			-webkit-border-radius:5px;
+			
+			
 		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+		h1 { 
+			font-size: 100%; 
+			color: #000; 
+			line-height: 1.5em; 
+			margin:0px;
+		}
 	</style>
 </head>
 
 <body>
   <!-- This file lives in public/422.html -->
+	<div id="logo">
+			<img src="/images/logo4.png" width="175px">
+	</div>
   <div class="dialog">
     <h1>The change you wanted was rejected.</h1>
     <p>Maybe you tried to change something you didn't have access to.</p>
