Fixed the 404 pages

--- a/trailr/public/422.html
+++ b/trailr/public/422.html
@@ -6,11 +6,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>The change you wanted was rejected (422)</title>
-
 	<style type="text/css">
 		body { 
-			padding-top:4em;
-			background-color: #222222; 
+			margin:0px;
+			
+			background-color:white; 
 			color: #666; 
 			text-align: center; 
 			font-family: arial, sans-serif; 
@@ -22,6 +22,11 @@
 			margin:0px;
 			margin-left:auto;
 			margin-right:auto;			
+
+			text-align:center;
+			margin-bottom:15px;
+
+
 		}
 		
 		div.dialog {
@@ -31,7 +36,7 @@
 			border: 1px solid #ccc;
 			border-right-color: #999;
 			border-bottom-color: #999;
-			background-color:#F5F5F5;
+			background-color:#FAFAFA;
 			
 			-moz-border-radius:5px;
 			-webkit-border-radius:5px;
@@ -44,13 +49,37 @@
 			line-height: 1.5em; 
 			margin:0px;
 		}
+		
+		.space {
+			height:4.5em;
+		}
+		
 	</style>
 </head>
 
 <body>
+	
+	
+
+	<table cellspacing="0" height="10px" width="100%">
+		<tr>
+			<td bgcolor="#95ca38"></td>
+			<td bgcolor="#f8bd29"></td>
+			<td bgcolor="#e05d4c"></td>
+			<td bgcolor="#02a1ea"></td>
+			<td bgcolor="#fc3f8d"></td>
+			<td bgcolor="#95ca38"></td>
+		</tr>
+	</table>
+	
+	
+	<div class="space"></div>
+	
+	
   <!-- This file lives in public/422.html -->
 	<div id="logo">
-			<img src="/images/logo4.png" width="175px">
+			<!--<img src="/images/logo6.png" width="175px">-->
+			<img src="images/logo6.png" width="350px">
 	</div>
   <div class="dialog">
     <h1>The change you wanted was rejected.</h1>
