Fixed the logo link for the error pages

--- a/trailr/public/404.html
+++ b/trailr/public/404.html
@@ -77,7 +77,7 @@
   <!-- This file lives in public/404.html -->
 	<div id="logo">
 			<!--<img src="/images/logo6.png" width="175px">-->
-			<img src="images/logo6.png" width="350px">
+			<img src="/images/logo6.png" width="350px">
 	</div>
   <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
