--- a/trailr/public/500.html
+++ b/trailr/public/500.html
@@ -79,7 +79,7 @@
   <!-- This file lives in public/500.html -->
 	<div id="logo">
 			<!--<img src="/images/logo6.png" width="175px">-->
-			<img src="images/logo6.png" width="350px">
+			<img src="/images/logo6.png" width="350px">
 	</div>
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
