--- a/trailr/public/422.html
+++ b/trailr/public/422.html
@@ -79,7 +79,7 @@
   <!-- This file lives in public/422.html -->
 	<div id="logo">
 			<!--<img src="/images/logo6.png" width="175px">-->
-			<img src="images/logo6.png" width="350px">
+			<img src="/images/logo6.png" width="350px">
 	</div>
   <div class="dialog">
     <h1>The change you wanted was rejected.</h1>
