Just commiting all random changes

--- a/datepicker/index.html
+++ b/datepicker/index.html
@@ -13,7 +13,13 @@
 		</style>
 	</head>
 	<body>
+		<p>
 		<h2>LineHive Date Picker Demo</h2>
+		</p>
+		<p>
+		<form>
 		<input type="hidden" name="test" value="">
+		</form>
+		</p>
 	</body>
 </html>
